--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="main-container">
       <div id="overlay" class="start">
         <h2 class="title">Wheel of Success</h2>
-        <a class="game-button">Start Game</a>
+        <button class="game-button">Start Game</button>
       </div>
 
       <div id="banner" class="section">
