Modified game reset

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
 
     <div id="phrase" class="section">
-      <ul></ul>
+      <ul id="phrase-list"></ul>
     </div>
     <div id="qwerty" class="section">
       <div class="keyrow">
